--- a/app/views/post_images/_list.html.erb
+++ b/app/views/post_images/_list.html.erb
@@ -10,5 +10,6 @@
     <p><%= link_to "#{post_image.post_comments.count} コメント", post_image_path(post_image.id) %></p>
   </div>
 <% end %>
-
 <!--部分テンプレート。ローカル変数-->
+
+<%= paginate post_images %>
